// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`state is set up with empty consignment metadata 1`] = `
<View
  style={
    Array [
      Object {
        "backgroundColor": "black",
        "flexBasis": 0,
        "flexGrow": 1,
        "flexShrink": 1,
      },
      undefined,
    ]
  }
>
  <View
    style={
      Array [
        Object {
          "alignSelf": "center",
          "backgroundColor": "black",
          "height": "100%",
          "maxWidth": 540,
          "width": "100%",
        },
        undefined,
      ]
    }
  >
    <View
      keyboardVerticalOffset={15}
      onLayout={[Function]}
      style={
        Array [
          Object {
            "flex": 1,
          },
          Object {
            "paddingBottom": 0,
          },
        ]
      }
    >
      <View
        style={
          Object {
            "flexGrow": 1,
          }
        }
      >
        <RCTScrollView>
          <View>
            <View>
              <View
                style={
                  Array [
                    undefined,
                    Object {
                      "alignItems": "center",
                      "flexDirection": "row",
                      "paddingVertical": 6,
                    },
                  ]
                }
              >
                <View
                  style={
                    Array [
                      Object {
                        "margin": 10,
                      },
                      Object {
                        "flex": 1,
                        "maxHeight": 40,
                      },
                    ]
                  }
                >
                  <View
                    style={
                      Object {
                        "flexDirection": "row",
                        "height": 40,
                      }
                    }
                  >
                    <TextInput
                      autoCorrect={false}
                      clearButtonMode="while-editing"
                      keyboardAppearance="dark"
                      onChangeText={[Function]}
                      placeholder="Title"
                      placeholderTextColor="#cccccc"
                      selectionColor="#cccccc"
                      style={
                        Array [
                          Object {
                            "backgroundColor": "black",
                            "color": "white",
                            "flexBasis": 0,
                            "flexGrow": 1,
                            "flexShrink": 1,
                            "fontFamily": "AGaramondPro-Regular",
                            "fontSize": 20,
                            "height": 40,
                          },
                          undefined,
                        ]
                      }
                      value={undefined}
                    />
                  </View>
                  <View
                    style={
                      Array [
                        Object {
                          "backgroundColor": "#e5e5e5",
                          "height": 2,
                        },
                        undefined,
                      ]
                    }
                  />
                </View>
              </View>
              <View
                style={
                  Array [
                    undefined,
                    Object {
                      "alignItems": "center",
                      "flexDirection": "row",
                      "paddingVertical": 6,
                    },
                  ]
                }
              >
                <View
                  style={
                    Array [
                      Object {
                        "margin": 10,
                      },
                      Object {
                        "flex": 1,
                        "maxHeight": 40,
                      },
                    ]
                  }
                >
                  <View
                    style={
                      Object {
                        "flexDirection": "row",
                        "height": 40,
                      }
                    }
                  >
                    <TextInput
                      autoCorrect={false}
                      clearButtonMode="while-editing"
                      keyboardAppearance="dark"
                      onChangeText={[Function]}
                      placeholder="Year"
                      placeholderTextColor="#cccccc"
                      selectionColor="#cccccc"
                      style={
                        Array [
                          Object {
                            "backgroundColor": "black",
                            "color": "white",
                            "flexBasis": 0,
                            "flexGrow": 1,
                            "flexShrink": 1,
                            "fontFamily": "AGaramondPro-Regular",
                            "fontSize": 20,
                            "height": 40,
                          },
                          undefined,
                        ]
                      }
                      value={undefined}
                    />
                  </View>
                  <View
                    style={
                      Array [
                        Object {
                          "backgroundColor": "#e5e5e5",
                          "height": 2,
                        },
                        undefined,
                      ]
                    }
                  />
                </View>
              </View>
              <View
                style={
                  Array [
                    undefined,
                    Object {
                      "alignItems": "center",
                      "flexDirection": "row",
                      "paddingVertical": 6,
                    },
                  ]
                }
              >
                <View
                  style={
                    Array [
                      Object {
                        "margin": 10,
                      },
                      Object {
                        "flex": 1,
                        "maxHeight": 40,
                      },
                    ]
                  }
                >
                  <View
                    style={
                      Object {
                        "flexDirection": "row",
                        "height": 40,
                      }
                    }
                  >
                    <TextInput
                      autoCorrect={false}
                      clearButtonMode="while-editing"
                      keyboardAppearance="dark"
                      onChangeText={[Function]}
                      onFocus={[Function]}
                      placeholder="Category"
                      placeholderTextColor="#cccccc"
                      selectionColor="#cccccc"
                      style={
                        Array [
                          Object {
                            "backgroundColor": "black",
                            "color": "white",
                            "flexBasis": 0,
                            "flexGrow": 1,
                            "flexShrink": 1,
                            "fontFamily": "AGaramondPro-Regular",
                            "fontSize": 20,
                            "height": 40,
                          },
                          undefined,
                        ]
                      }
                      value={undefined}
                    />
                  </View>
                  <View
                    style={
                      Array [
                        Object {
                          "backgroundColor": "#e5e5e5",
                          "height": 2,
                        },
                        undefined,
                      ]
                    }
                  />
                </View>
              </View>
              <View
                style={
                  Array [
                    undefined,
                    Object {
                      "alignItems": "center",
                      "flexDirection": "row",
                      "paddingVertical": 6,
                    },
                  ]
                }
              >
                <View
                  style={
                    Array [
                      Object {
                        "margin": 10,
                      },
                      Object {
                        "flex": 1,
                        "maxHeight": 40,
                      },
                    ]
                  }
                >
                  <View
                    style={
                      Object {
                        "flexDirection": "row",
                        "height": 40,
                      }
                    }
                  >
                    <TextInput
                      autoCorrect={false}
                      clearButtonMode="while-editing"
                      keyboardAppearance="dark"
                      onChangeText={[Function]}
                      placeholder="Medium"
                      placeholderTextColor="#cccccc"
                      selectionColor="#cccccc"
                      style={
                        Array [
                          Object {
                            "backgroundColor": "black",
                            "color": "white",
                            "flexBasis": 0,
                            "flexGrow": 1,
                            "flexShrink": 1,
                            "fontFamily": "AGaramondPro-Regular",
                            "fontSize": 20,
                            "height": 40,
                          },
                          undefined,
                        ]
                      }
                      value={undefined}
                    />
                  </View>
                  <View
                    style={
                      Array [
                        Object {
                          "backgroundColor": "#e5e5e5",
                          "height": 2,
                        },
                        undefined,
                      ]
                    }
                  />
                </View>
              </View>
              <View
                style={
                  Array [
                    undefined,
                    Object {
                      "alignItems": "center",
                      "flexDirection": "row",
                      "paddingVertical": 6,
                    },
                  ]
                }
              >
                <View
                  style={
                    Array [
                      Object {
                        "margin": 10,
                      },
                      Object {
                        "flex": 1,
                        "maxHeight": 40,
                      },
                    ]
                  }
                >
                  <View
                    style={
                      Object {
                        "flexDirection": "row",
                        "height": 40,
                      }
                    }
                  >
                    <TextInput
                      autoCorrect={false}
                      clearButtonMode="while-editing"
                      keyboardAppearance="dark"
                      onChangeText={[Function]}
                      placeholder="Width"
                      placeholderTextColor="#cccccc"
                      selectionColor="#cccccc"
                      style={
                        Array [
                          Object {
                            "backgroundColor": "black",
                            "color": "white",
                            "flexBasis": 0,
                            "flexGrow": 1,
                            "flexShrink": 1,
                            "fontFamily": "AGaramondPro-Regular",
                            "fontSize": 20,
                            "height": 40,
                          },
                          undefined,
                        ]
                      }
                      value={undefined}
                    />
                  </View>
                  <View
                    style={
                      Array [
                        Object {
                          "backgroundColor": "#e5e5e5",
                          "height": 2,
                        },
                        undefined,
                      ]
                    }
                  />
                </View>
                <View
                  style={
                    Array [
                      Object {
                        "margin": 10,
                      },
                      Object {
                        "flex": 1,
                        "maxHeight": 40,
                      },
                    ]
                  }
                >
                  <View
                    style={
                      Object {
                        "flexDirection": "row",
                        "height": 40,
                      }
                    }
                  >
                    <TextInput
                      autoCorrect={false}
                      clearButtonMode="while-editing"
                      keyboardAppearance="dark"
                      onChangeText={[Function]}
                      placeholder="Height"
                      placeholderTextColor="#cccccc"
                      selectionColor="#cccccc"
                      style={
                        Array [
                          Object {
                            "backgroundColor": "black",
                            "color": "white",
                            "flexBasis": 0,
                            "flexGrow": 1,
                            "flexShrink": 1,
                            "fontFamily": "AGaramondPro-Regular",
                            "fontSize": 20,
                            "height": 40,
                          },
                          undefined,
                        ]
                      }
                      value={undefined}
                    />
                  </View>
                  <View
                    style={
                      Array [
                        Object {
                          "backgroundColor": "#e5e5e5",
                          "height": 2,
                        },
                        undefined,
                      ]
                    }
                  />
                </View>
              </View>
              <View
                style={
                  Array [
                    undefined,
                    Object {
                      "alignItems": "center",
                      "flexDirection": "row",
                      "paddingVertical": 6,
                    },
                  ]
                }
              >
                <View
                  style={
                    Array [
                      Object {
                        "margin": 10,
                      },
                      Object {
                        "flex": 1,
                        "maxHeight": 40,
                      },
                    ]
                  }
                >
                  <View
                    style={
                      Object {
                        "flexDirection": "row",
                        "height": 40,
                      }
                    }
                  >
                    <TextInput
                      autoCorrect={false}
                      clearButtonMode="while-editing"
                      keyboardAppearance="dark"
                      placeholder="Depth"
                      placeholderTextColor="#cccccc"
                      selectionColor="#cccccc"
                      style={
                        Array [
                          Object {
                            "backgroundColor": "black",
                            "color": "white",
                            "flexBasis": 0,
                            "flexGrow": 1,
                            "flexShrink": 1,
                            "fontFamily": "AGaramondPro-Regular",
                            "fontSize": 20,
                            "height": 40,
                          },
                          undefined,
                        ]
                      }
                    />
                  </View>
                  <View
                    style={
                      Array [
                        Object {
                          "backgroundColor": "#e5e5e5",
                          "height": 2,
                        },
                        undefined,
                      ]
                    }
                  />
                </View>
                <View
                  style={
                    Object {
                      "alignContent": "center",
                      "flex": 1,
                      "flexDirection": "row",
                      "margin": 10,
                    }
                  }
                >
                  <Text
                    accessible={true}
                    allowFontScaling={true}
                    disabled={false}
                    ellipsizeMode="tail"
                    style={
                      Array [
                        Object {
                          "color": "#cccccc",
                          "fontSize": 20,
                          "marginBottom": 18,
                          "marginTop": 18,
                          "paddingLeft": 25,
                          "paddingRight": 25,
                          "textAlign": "center",
                        },
                        Object {
                          "flex": 1,
                          "paddingLeft": 10,
                          "textAlign": "left",
                        },
                        Object {
                          "fontFamily": "AGaramondPro-Regular",
                        },
                      ]
                    }
                  >
                    Units
                  </Text>
                  <View
                    accessibilityComponentType={undefined}
                    accessibilityLabel={undefined}
                    accessibilityTraits={undefined}
                    accessible={true}
                    hasTVPreferredFocus={undefined}
                    hitSlop={undefined}
                    isTVSelectable={true}
                    nativeID={undefined}
                    onLayout={undefined}
                    onResponderGrant={[Function]}
                    onResponderMove={[Function]}
                    onResponderRelease={[Function]}
                    onResponderTerminate={[Function]}
                    onResponderTerminationRequest={[Function]}
                    onStartShouldSetResponder={[Function]}
                    style={
                      Array [
                        Object {
                          "backgroundColor": "transparent",
                        },
                        Array [
                          Object {
                            "alignItems": "center",
                            "backgroundColor": "green",
                            "borderColor": "white",
                            "borderRadius": 16,
                            "borderWidth": 1,
                            "height": 34,
                            "width": 64,
                          },
                          Object {
                            "backgroundColor": "black",
                          },
                        ],
                      ]
                    }
                    testID={undefined}
                    tvParallaxProperties={undefined}
                  >
                    <View>
                      <View
                        style={
                          Array [
                            Object {
                              "flexDirection": "row",
                              "justifyContent": "space-between",
                              "marginLeft": 8,
                              "marginRight": 8,
                              "marginTop": 9,
                            },
                            undefined,
                          ]
                        }
                      >
                        <Text
                          accessible={true}
                          allowFontScaling={true}
                          disabled={false}
                          ellipsizeMode="tail"
                          style={
                            Array [
                              Object {
                                "color": "white",
                                "fontFamily": "Avant Garde Gothic ITCW01Dm",
                                "fontSize": 11,
                                "letterSpacing": 0.75,
                                "textAlign": "center",
                                "width": 24,
                              },
                              Object {
                                "color": "white",
                              },
                            ]
                          }
                        >
                          
                        </Text>
                        <Text
                          accessible={true}
                          allowFontScaling={true}
                          disabled={false}
                          ellipsizeMode="tail"
                          style={
                            Array [
                              Object {
                                "color": "white",
                                "fontFamily": "Avant Garde Gothic ITCW01Dm",
                                "fontSize": 11,
                                "letterSpacing": 0.75,
                                "textAlign": "center",
                                "width": 24,
                              },
                              Object {
                                "color": "white",
                              },
                            ]
                          }
                        >
                          IN
                        </Text>
                      </View>
                      <View
                        style={
                          Array [
                            Object {
                              "left": 6,
                              "position": "absolute",
                              "right": 6,
                              "top": 4,
                            },
                            Object {
                              "flexDirection": "row",
                            },
                          ]
                        }
                      >
                        <View
                          style={
                            Array [
                              Object {
                                "backgroundColor": "black",
                                "borderColor": "white",
                                "borderRadius": 12,
                                "borderWidth": 1,
                                "height": 24,
                                "width": 24,
                              },
                              Object {
                                "borderColor": "white",
                              },
                            ]
                          }
                        />
                      </View>
                    </View>
                  </View>
                </View>
              </View>
            </View>
          </View>
        </RCTScrollView>
      </View>
      <View
        style={
          Array [
            Object {
              "backgroundColor": "#e5e5e5",
              "height": 1,
            },
            undefined,
          ]
        }
      />
      <View
        accessibilityComponentType={undefined}
        accessibilityLabel={undefined}
        accessibilityTraits={undefined}
        accessible={true}
        collapsable={undefined}
        hitSlop={undefined}
        isTVSelectable={true}
        nativeID={undefined}
        onLayout={undefined}
        onResponderGrant={[Function]}
        onResponderMove={[Function]}
        onResponderRelease={[Function]}
        onResponderTerminate={[Function]}
        onResponderTerminationRequest={[Function]}
        onStartShouldSetResponder={[Function]}
        style={
          Object {
            "backgroundColor": "black",
            "height": 56,
            "marginBottom": 0,
            "opacity": 1,
            "paddingTop": 18,
          }
        }
        testID={undefined}
        tvParallaxProperties={undefined}
      >
        <Text
          accessible={true}
          allowFontScaling={true}
          disabled={false}
          ellipsizeMode="tail"
          style={
            Array [
              Object {
                "color": "white",
                "flexBasis": 0,
                "flexGrow": 1,
                "flexShrink": 1,
                "fontFamily": "Avant Garde Gothic ITCW01Dm",
                "fontSize": 14,
                "textAlign": "center",
              },
              undefined,
            ]
          }
        >
          DONE
        </Text>
      </View>
    </View>
  </View>
</View>
`;

exports[`state is set up with filled consignment metadata 1`] = `
<View
  style={
    Array [
      Object {
        "backgroundColor": "black",
        "flexBasis": 0,
        "flexGrow": 1,
        "flexShrink": 1,
      },
      undefined,
    ]
  }
>
  <View
    style={
      Array [
        Object {
          "alignSelf": "center",
          "backgroundColor": "black",
          "height": "100%",
          "maxWidth": 540,
          "width": "100%",
        },
        undefined,
      ]
    }
  >
    <View
      keyboardVerticalOffset={15}
      onLayout={[Function]}
      style={
        Array [
          Object {
            "flex": 1,
          },
          Object {
            "paddingBottom": 0,
          },
        ]
      }
    >
      <View
        style={
          Object {
            "flexGrow": 1,
          }
        }
      >
        <RCTScrollView>
          <View>
            <View>
              <View
                style={
                  Array [
                    undefined,
                    Object {
                      "alignItems": "center",
                      "flexDirection": "row",
                      "paddingVertical": 6,
                    },
                  ]
                }
              >
                <View
                  style={
                    Array [
                      Object {
                        "margin": 10,
                      },
                      Object {
                        "flex": 1,
                        "maxHeight": 40,
                      },
                    ]
                  }
                >
                  <View
                    style={
                      Object {
                        "flexDirection": "row",
                        "height": 40,
                      }
                    }
                  >
                    <TextInput
                      autoCorrect={false}
                      clearButtonMode="while-editing"
                      keyboardAppearance="dark"
                      onChangeText={[Function]}
                      placeholder="Title"
                      placeholderTextColor="#cccccc"
                      selectionColor="#cccccc"
                      style={
                        Array [
                          Object {
                            "backgroundColor": "black",
                            "color": "white",
                            "flexBasis": 0,
                            "flexGrow": 1,
                            "flexShrink": 1,
                            "fontFamily": "AGaramondPro-Regular",
                            "fontSize": 20,
                            "height": 40,
                          },
                          undefined,
                        ]
                      }
                      value="My Work"
                    />
                  </View>
                  <View
                    style={
                      Array [
                        Object {
                          "backgroundColor": "#e5e5e5",
                          "height": 2,
                        },
                        undefined,
                      ]
                    }
                  />
                </View>
              </View>
              <View
                style={
                  Array [
                    undefined,
                    Object {
                      "alignItems": "center",
                      "flexDirection": "row",
                      "paddingVertical": 6,
                    },
                  ]
                }
              >
                <View
                  style={
                    Array [
                      Object {
                        "margin": 10,
                      },
                      Object {
                        "flex": 1,
                        "maxHeight": 40,
                      },
                    ]
                  }
                >
                  <View
                    style={
                      Object {
                        "flexDirection": "row",
                        "height": 40,
                      }
                    }
                  >
                    <TextInput
                      autoCorrect={false}
                      clearButtonMode="while-editing"
                      keyboardAppearance="dark"
                      onChangeText={[Function]}
                      placeholder="Year"
                      placeholderTextColor="#cccccc"
                      selectionColor="#cccccc"
                      style={
                        Array [
                          Object {
                            "backgroundColor": "black",
                            "color": "white",
                            "flexBasis": 0,
                            "flexGrow": 1,
                            "flexShrink": 1,
                            "fontFamily": "AGaramondPro-Regular",
                            "fontSize": 20,
                            "height": 40,
                          },
                          undefined,
                        ]
                      }
                      value="1983"
                    />
                  </View>
                  <View
                    style={
                      Array [
                        Object {
                          "backgroundColor": "#e5e5e5",
                          "height": 2,
                        },
                        undefined,
                      ]
                    }
                  />
                </View>
              </View>
              <View
                style={
                  Array [
                    undefined,
                    Object {
                      "alignItems": "center",
                      "flexDirection": "row",
                      "paddingVertical": 6,
                    },
                  ]
                }
              >
                <View
                  style={
                    Array [
                      Object {
                        "margin": 10,
                      },
                      Object {
                        "flex": 1,
                        "maxHeight": 40,
                      },
                    ]
                  }
                >
                  <View
                    style={
                      Object {
                        "flexDirection": "row",
                        "height": 40,
                      }
                    }
                  >
                    <TextInput
                      autoCorrect={false}
                      clearButtonMode="while-editing"
                      keyboardAppearance="dark"
                      onChangeText={[Function]}
                      onFocus={[Function]}
                      placeholder="Category"
                      placeholderTextColor="#cccccc"
                      selectionColor="#cccccc"
                      style={
                        Array [
                          Object {
                            "backgroundColor": "black",
                            "color": "white",
                            "flexBasis": 0,
                            "flexGrow": 1,
                            "flexShrink": 1,
                            "fontFamily": "AGaramondPro-Regular",
                            "fontSize": 20,
                            "height": 40,
                          },
                          undefined,
                        ]
                      }
                      value="Design"
                    />
                  </View>
                  <View
                    style={
                      Array [
                        Object {
                          "backgroundColor": "#e5e5e5",
                          "height": 2,
                        },
                        undefined,
                      ]
                    }
                  />
                </View>
              </View>
              <View
                style={
                  Array [
                    undefined,
                    Object {
                      "alignItems": "center",
                      "flexDirection": "row",
                      "paddingVertical": 6,
                    },
                  ]
                }
              >
                <View
                  style={
                    Array [
                      Object {
                        "margin": 10,
                      },
                      Object {
                        "flex": 1,
                        "maxHeight": 40,
                      },
                    ]
                  }
                >
                  <View
                    style={
                      Object {
                        "flexDirection": "row",
                        "height": 40,
                      }
                    }
                  >
                    <TextInput
                      autoCorrect={false}
                      clearButtonMode="while-editing"
                      keyboardAppearance="dark"
                      onChangeText={[Function]}
                      placeholder="Medium"
                      placeholderTextColor="#cccccc"
                      selectionColor="#cccccc"
                      style={
                        Array [
                          Object {
                            "backgroundColor": "black",
                            "color": "white",
                            "flexBasis": 0,
                            "flexGrow": 1,
                            "flexShrink": 1,
                            "fontFamily": "AGaramondPro-Regular",
                            "fontSize": 20,
                            "height": 40,
                          },
                          undefined,
                        ]
                      }
                      value="Wood"
                    />
                  </View>
                  <View
                    style={
                      Array [
                        Object {
                          "backgroundColor": "#e5e5e5",
                          "height": 2,
                        },
                        undefined,
                      ]
                    }
                  />
                </View>
              </View>
              <View
                style={
                  Array [
                    undefined,
                    Object {
                      "alignItems": "center",
                      "flexDirection": "row",
                      "paddingVertical": 6,
                    },
                  ]
                }
              >
                <View
                  style={
                    Array [
                      Object {
                        "margin": 10,
                      },
                      Object {
                        "flex": 1,
                        "maxHeight": 40,
                      },
                    ]
                  }
                >
                  <View
                    style={
                      Object {
                        "flexDirection": "row",
                        "height": 40,
                      }
                    }
                  >
                    <TextInput
                      autoCorrect={false}
                      clearButtonMode="while-editing"
                      keyboardAppearance="dark"
                      onChangeText={[Function]}
                      placeholder="Width"
                      placeholderTextColor="#cccccc"
                      selectionColor="#cccccc"
                      style={
                        Array [
                          Object {
                            "backgroundColor": "black",
                            "color": "white",
                            "flexBasis": 0,
                            "flexGrow": 1,
                            "flexShrink": 1,
                            "fontFamily": "AGaramondPro-Regular",
                            "fontSize": 20,
                            "height": 40,
                          },
                          undefined,
                        ]
                      }
                      value="100"
                    />
                  </View>
                  <View
                    style={
                      Array [
                        Object {
                          "backgroundColor": "#e5e5e5",
                          "height": 2,
                        },
                        undefined,
                      ]
                    }
                  />
                </View>
                <View
                  style={
                    Array [
                      Object {
                        "margin": 10,
                      },
                      Object {
                        "flex": 1,
                        "maxHeight": 40,
                      },
                    ]
                  }
                >
                  <View
                    style={
                      Object {
                        "flexDirection": "row",
                        "height": 40,
                      }
                    }
                  >
                    <TextInput
                      autoCorrect={false}
                      clearButtonMode="while-editing"
                      keyboardAppearance="dark"
                      onChangeText={[Function]}
                      placeholder="Height"
                      placeholderTextColor="#cccccc"
                      selectionColor="#cccccc"
                      style={
                        Array [
                          Object {
                            "backgroundColor": "black",
                            "color": "white",
                            "flexBasis": 0,
                            "flexGrow": 1,
                            "flexShrink": 1,
                            "fontFamily": "AGaramondPro-Regular",
                            "fontSize": 20,
                            "height": 40,
                          },
                          undefined,
                        ]
                      }
                      value="100"
                    />
                  </View>
                  <View
                    style={
                      Array [
                        Object {
                          "backgroundColor": "#e5e5e5",
                          "height": 2,
                        },
                        undefined,
                      ]
                    }
                  />
                </View>
              </View>
              <View
                style={
                  Array [
                    undefined,
                    Object {
                      "alignItems": "center",
                      "flexDirection": "row",
                      "paddingVertical": 6,
                    },
                  ]
                }
              >
                <View
                  style={
                    Array [
                      Object {
                        "margin": 10,
                      },
                      Object {
                        "flex": 1,
                        "maxHeight": 40,
                      },
                    ]
                  }
                >
                  <View
                    style={
                      Object {
                        "flexDirection": "row",
                        "height": 40,
                      }
                    }
                  >
                    <TextInput
                      autoCorrect={false}
                      clearButtonMode="while-editing"
                      keyboardAppearance="dark"
                      placeholder="Depth"
                      placeholderTextColor="#cccccc"
                      selectionColor="#cccccc"
                      style={
                        Array [
                          Object {
                            "backgroundColor": "black",
                            "color": "white",
                            "flexBasis": 0,
                            "flexGrow": 1,
                            "flexShrink": 1,
                            "fontFamily": "AGaramondPro-Regular",
                            "fontSize": 20,
                            "height": 40,
                          },
                          undefined,
                        ]
                      }
                    />
                  </View>
                  <View
                    style={
                      Array [
                        Object {
                          "backgroundColor": "#e5e5e5",
                          "height": 2,
                        },
                        undefined,
                      ]
                    }
                  />
                </View>
                <View
                  style={
                    Object {
                      "alignContent": "center",
                      "flex": 1,
                      "flexDirection": "row",
                      "margin": 10,
                    }
                  }
                >
                  <Text
                    accessible={true}
                    allowFontScaling={true}
                    disabled={false}
                    ellipsizeMode="tail"
                    style={
                      Array [
                        Object {
                          "color": "#cccccc",
                          "fontSize": 20,
                          "marginBottom": 18,
                          "marginTop": 18,
                          "paddingLeft": 25,
                          "paddingRight": 25,
                          "textAlign": "center",
                        },
                        Object {
                          "flex": 1,
                          "paddingLeft": 10,
                          "textAlign": "left",
                        },
                        Object {
                          "fontFamily": "AGaramondPro-Regular",
                        },
                      ]
                    }
                  >
                    Units
                  </Text>
                  <View
                    accessibilityComponentType={undefined}
                    accessibilityLabel={undefined}
                    accessibilityTraits={undefined}
                    accessible={true}
                    hasTVPreferredFocus={undefined}
                    hitSlop={undefined}
                    isTVSelectable={true}
                    nativeID={undefined}
                    onLayout={undefined}
                    onResponderGrant={[Function]}
                    onResponderMove={[Function]}
                    onResponderRelease={[Function]}
                    onResponderTerminate={[Function]}
                    onResponderTerminationRequest={[Function]}
                    onStartShouldSetResponder={[Function]}
                    style={
                      Array [
                        Object {
                          "backgroundColor": "transparent",
                        },
                        Array [
                          Object {
                            "alignItems": "center",
                            "backgroundColor": "green",
                            "borderColor": "white",
                            "borderRadius": 16,
                            "borderWidth": 1,
                            "height": 34,
                            "width": 64,
                          },
                          Object {
                            "backgroundColor": "white",
                          },
                        ],
                      ]
                    }
                    testID={undefined}
                    tvParallaxProperties={undefined}
                  >
                    <View>
                      <View
                        style={
                          Array [
                            Object {
                              "flexDirection": "row",
                              "justifyContent": "space-between",
                              "marginLeft": 8,
                              "marginRight": 8,
                              "marginTop": 9,
                            },
                            undefined,
                          ]
                        }
                      >
                        <Text
                          accessible={true}
                          allowFontScaling={true}
                          disabled={false}
                          ellipsizeMode="tail"
                          style={
                            Array [
                              Object {
                                "color": "white",
                                "fontFamily": "Avant Garde Gothic ITCW01Dm",
                                "fontSize": 11,
                                "letterSpacing": 0.75,
                                "textAlign": "center",
                                "width": 24,
                              },
                              Object {
                                "color": "black",
                              },
                            ]
                          }
                        >
                          CM
                        </Text>
                        <Text
                          accessible={true}
                          allowFontScaling={true}
                          disabled={false}
                          ellipsizeMode="tail"
                          style={
                            Array [
                              Object {
                                "color": "white",
                                "fontFamily": "Avant Garde Gothic ITCW01Dm",
                                "fontSize": 11,
                                "letterSpacing": 0.75,
                                "textAlign": "center",
                                "width": 24,
                              },
                              Object {
                                "color": "black",
                              },
                            ]
                          }
                        >
                          
                        </Text>
                      </View>
                      <View
                        style={
                          Array [
                            Object {
                              "left": 6,
                              "position": "absolute",
                              "right": 6,
                              "top": 4,
                            },
                            Object {
                              "flexDirection": "row-reverse",
                            },
                          ]
                        }
                      >
                        <View
                          style={
                            Array [
                              Object {
                                "backgroundColor": "black",
                                "borderColor": "black",
                                "borderRadius": 12,
                                "borderWidth": 1,
                                "height": 24,
                                "width": 24,
                              },
                              Object {
                                "borderColor": "white",
                              },
                            ]
                          }
                        />
                      </View>
                    </View>
                  </View>
                </View>
              </View>
            </View>
          </View>
        </RCTScrollView>
      </View>
      <View
        style={
          Array [
            Object {
              "backgroundColor": "#e5e5e5",
              "height": 1,
            },
            undefined,
          ]
        }
      />
      <View
        accessibilityComponentType={undefined}
        accessibilityLabel={undefined}
        accessibilityTraits={undefined}
        accessible={true}
        collapsable={undefined}
        hitSlop={undefined}
        isTVSelectable={true}
        nativeID={undefined}
        onLayout={undefined}
        onResponderGrant={[Function]}
        onResponderMove={[Function]}
        onResponderRelease={[Function]}
        onResponderTerminate={[Function]}
        onResponderTerminationRequest={[Function]}
        onStartShouldSetResponder={[Function]}
        style={
          Object {
            "backgroundColor": "black",
            "height": 56,
            "marginBottom": 0,
            "opacity": 1,
            "paddingTop": 18,
          }
        }
        testID={undefined}
        tvParallaxProperties={undefined}
      >
        <Text
          accessible={true}
          allowFontScaling={true}
          disabled={false}
          ellipsizeMode="tail"
          style={
            Array [
              Object {
                "color": "white",
                "flexBasis": 0,
                "flexGrow": 1,
                "flexShrink": 1,
                "fontFamily": "Avant Garde Gothic ITCW01Dm",
                "fontSize": 14,
                "textAlign": "center",
              },
              undefined,
            ]
          }
        >
          DONE
        </Text>
      </View>
    </View>
  </View>
</View>
`;
